# ripclone

./: .dockerignore  .env.example  .gitignore  ADVERSARIAL_REVIEW_2026-06-25.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.client  INVENTORY.md  LAUNCH_PLAN.md  LICENSE-APACHE  LICENSE-MIT  PRODUCT_PROPOSAL.md  README.md  ROADMAP.md  SECURITY.md  WAVE1_PROMPTS.md  benchmark.sh  docker-compose.yml  fly.bench.toml  fly.client-dev.toml  fly.client.toml  fly.server-dev.toml  fly.toml  install.sh  lazygit.py  pyproject.toml  requirements.txt  rust-toolchain.toml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deny.yml  release.yml
benchmark/: README.md  archive.sh  fly_gix_results.md  fly_shaped_benchmark.sh  giant-repo-gate-2026-07-08.md  latency.sh  latency_proxy.py  matrix.sh  plot_ratios.py  profile_one.sh  remote.sh  run_shaped_sweep.sh  sync_latency.sh  verify_full_clone.sh
docs/: ADVERSARIAL_REVIEW.md  ADVERSARIAL_REVIEW_2026-06-18.md  AGENTS.md  AGENT_VM_PROTOTYPE.md  ARCHIVE_ADVERSARIAL_REVIEW.md  ARTIFACT_LIFECYCLE.md  AUTH.md  BACKENDS.md  BENCHMARKS.md  BUILD_OPTIONS.md  CAS_CLONE_SPIKES_FINDINGS.md  CAS_CLONE_SPIKES_PLAN.md  CHANGELOG.md  CINCH_GIT_DESIGN.md  CODE_STORAGE_ANALYSIS.md  CONFIG.md  DESIGN.md  DISPATCHER.md  FAST_GIT_SERVICE_DESIGN.md  FRESHNESS.md  GC.md  PROVIDERS.md  REMOTE_HELPER.md  ROADMAP.md  SCALING_WORKERS.md  SYNC.md  SYNC_LATENCY_PROFILE.md  TROUBLESHOOTING.md  WEBHOOKS.md  WORKSPACES.md  WRITER_SCHEDULER_EXPERIMENT.md  pinned-base-topup.md
docs/examples/: github-actions-trigger.yml
docs/internal/: ADVERSARIAL_REVIEW_2026-06-25.md  ARCHIVE_AB_RESULTS.md  DISPATCHER.md  GITHUB_INTEGRATION.md  RELEASE_DRYRUN.md  ROADMAP.md  WRITER_SCHEDULER_EXPERIMENT.md
ripclone/: __main__.py  cache.py  cli.py  commit.py  config.py  github.py  server.py  sync.py
rust/: Cargo.toml  README.md  WRITER_PERF_ANALYSIS.md  build.rs  deny.toml
rust/.cargo/: config.toml
rust/examples/: bench.rs  mem_probe.rs
rust/proto/: clonepack.proto
rust/src/: api_job_queue.rs  api_ref_store.rs  archive.rs  artifact_admission.rs  artifact_builder.rs  artifact_manifest.rs  artifact_scheduler.rs  artifact_scheduler_backend.rs  artifact_scheduler_libsql.rs  artifact_scheduler_mysql.rs  artifact_scheduler_postgres.rs  backends.rs  bench.rs  blob_pack.rs  cas.rs  client.rs  clone_metrics.rs  clone_plan.rs  clone_transport.rs  clonepack.rs  config.rs  extract.rs  fsutil.rs  fusefs.rs  git.rs  git_source.rs  git_source_registry.rs  git_source_registry_libsql.rs  git_source_registry_mysql.rs  git_source_registry_postgres.rs  gix_util.rs  job_token.rs  lib.rs  manifest.rs  metrics.rs  mode.rs  oidc.rs  overlay.rs  pack.rs  pack_writer.rs  (+21 more)
rust/src/auth/: access.rs  broker.rs  jwt.rs  mod.rs  token_store.rs
rust/src/client/: tuning.rs
rust/src/dispatch/: ENV_BAG.md  autoscale.rs  exec.rs  fly.rs  heartbeat.rs  http.rs  mock.rs  mod.rs  select.rs
rust/src/meta/: libsql.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
rust/src/queue/: libsql_db.rs  local.rs  mod.rs  mysql_db.rs  postgres_db.rs  size_class.rs  sql.rs  sqlite_db.rs
rust/src/storage/: mod.rs  s3_storage.rs
rust/src/webhook/: gitea.rs  github.rs  gitlab.rs  mod.rs
rust/tests/: admission_cas.rs  archive_bounded.rs  backend_trait_neutrality.rs  config_backends.rs  e2e_added_repos.rs  e2e_agent_fleet.rs  e2e_api_ref_store.rs  e2e_async_build.rs  e2e_auth.rs  e2e_billing.rs  e2e_clone_metrics.rs  e2e_clone_pinning.rs  e2e_compaction.rs  e2e_concurrent_same_repo.rs  e2e_config_clone_mode.rs  e2e_config_global_and_overrides.rs  e2e_config_legacy_token_migration.rs  e2e_config_provider_add_then_clone.rs  e2e_config_sync_defaults.rs  e2e_dispatcher.rs  e2e_equivalence.rs  e2e_failure_injection.rs  e2e_farmout_concurrency.rs  e2e_forcepush_rewind.rs  e2e_freshness.rs  e2e_full_idx_bundle_race.rs  e2e_gc_race.rs  e2e_gitea_provider.rs  e2e_heartbeat.rs  e2e_login_logout.rs  e2e_lsm.rs  e2e_matrix_async_single_lsm.rs  e2e_matrix_async_twophase_lsm.rs  e2e_matrix_single_full.rs  e2e_matrix_single_lsm.rs  e2e_matrix_twophase_full.rs  e2e_matrix_twophase_lsm.rs  e2e_metadata_farmout.rs  e2e_metadata_mysql.rs  e2e_metadata_postgres.rs  (+34 more)
rust/tests/common/: mod.rs
rust/tests/suite/: archive_bounded.rs  config_backends.rs  docs_cli_surface.rs  e2e_added_repos.rs  e2e_agent_fleet.rs  e2e_async_build.rs  e2e_auth.rs  e2e_billing.rs  e2e_clone_metrics.rs  e2e_compaction.rs  e2e_concurrent_same_repo.rs  e2e_config_clone_mode.rs  e2e_config_global_and_overrides.rs  e2e_config_legacy_token_migration.rs  e2e_config_provider_add_then_clone.rs  e2e_config_sync_defaults.rs  e2e_equivalence.rs  e2e_failure_injection.rs  e2e_farmout_concurrency.rs  e2e_forcepush_rewind.rs  e2e_freshness.rs  e2e_gc_race.rs  e2e_lsm.rs  e2e_matrix_twophase_full.rs  e2e_matrix_twophase_lsm.rs  e2e_metadata_farmout.rs  e2e_metadata_sqlite.rs  e2e_multi_provider.rs  e2e_remote_helper.rs  e2e_repo_config.rs  e2e_roundtrip.rs  e2e_sql_queue.rs  e2e_sync_at_rev.rs  e2e_sync_phases.rs  e2e_two_phase.rs  e2e_verify_upstream.rs  e2e_version.rs  e2e_webhook.rs  e2e_worker_diskless.rs  e2e_worker_idle_exit.rs  (+6 more)
scripts/: audit-sqlite-only-support.sh  benchmark_clone_compare.sh  benchmark_fly_client.sh  benchmark_latency.sh  benchmark_matrix.sh  benchmark_remote.sh  benchmark_smoke.sh  ci-build-artifacts.sh  ci.sh  e2e_archive.sh  e2e_clone_pinning_minio.sh  e2e_clonepack.sh  e2e_gitea_local.sh  e2e_local.sh  e2e_remote_helper.sh  e2e_s3_minio.sh  e2e_smart_http.sh  fly_benchmark.sh  fly_client_test.sh  fly_deploy.sh  install-build-deps.sh  latency_proxy.py  measure_archive.sh  musl-smoke.sh  profile_one.sh  test-queue-sql.sh  trigger_fly_client_test.sh  verify_full_clone.sh
spikes/: Cargo.toml
spikes/scripts/: spike1.sh  spike2.sh  spike3.sh  spike4.sh
spikes/src/: cas.rs  git.rs  main.rs  materialize.rs  simulate.rs  skeleton.rs  storage.rs
tests/fly/: Dockerfile  Dockerfile.ci  Dockerfile.client  Dockerfile.client.ci  (+7 more)
(+4 files in other folders)
