[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ripclone"
version = "0.1.0"
description = "GitHub-native fast clone and commit proxy for agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ripclone = "ripclone.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ripclone*"]
