[package]
name = "ripclone"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CAS-based git clone helper: fast clones served by a content-addressed backend"
repository = "https://github.com/russellromney/ripclone"

[[bin]]
name = "ripclone"
path = "src/bin/cli.rs"

[[bin]]
name = "ripclone-server"
path = "src/bin/server.rs"

[[bin]]
name = "ripclone-proxy"
path = "src/bin/ripclone-proxy.rs"

[[bin]]
name = "git-remote-ripclone"
path = "src/bin/git-remote-ripclone.rs"

[[bin]]
name = "writer_bench"
path = "src/bin/writer_bench.rs"

[[bin]]
name = "ripclone-worker"
path = "src/bin/ripclone-worker.rs"

[features]
default = ["zlib-ng"]
# Use zlib-ng for faster pack compression/decompression. Disable this feature
# (e.g. `cargo build --no-default-features`) on platforms where cmake is not
# available.
zlib-ng = ["flate2/zlib-ng"]

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
byteorder = "1.5"
chrono = "0.4"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive", "env"] }
filetime = "0.2"
flate2 = "1"
futures = "0.3"
hex = "0.4"
libc = "0.2.186"
prost = "0.14"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
s3 = { version = "0.1.36", default-features = false, features = ["async", "rustls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
fastcdc = "4"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"
walkdir = "2"
zstd = { version = "0.13", features = ["zdict_builder"] }
secrecy = "0.10.3"
async-trait = "0.1.89"
jsonwebtoken = "10.4.0"
subtle = "2"
# Pluggable SQL queue + metadata backends: sqlite (local), postgres/mysql
# (network), libsql (remote Turso Cloud).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "mysql"] }
# remote-only: `remote` + `tls` (hyper + hyper-rustls) WITHOUT `core`, so libsql
# does NOT bundle SQLite's C library (which would collide with sqlx's bundled
# SQLite — "Once poisoned"). `tls` supplies the HTTP connector build() requires.
libsql = { version = "0.9", default-features = false, features = ["remote", "tls"] }
gix = "0.85.0"
gix-pack = "0.72.0"
keyring = "3"
rpassword = "7"
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
prost-build = "0.14"
