[package]
name = "ripclone"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "CAS-based git clone helper: fast clones served by a content-addressed backend"
repository = "https://github.com/russellromney/ripclone"
readme = "README.md"
keywords = ["git", "clone", "cas", "ci", "object-storage"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ripclone"
path = "src/bin/cli.rs"

[[bin]]
name = "ripclone-server"
path = "src/bin/server.rs"

[[bin]]
name = "ripclone-proxy"
path = "src/bin/ripclone-proxy.rs"

[[bin]]
name = "git-remote-ripclone"
path = "src/bin/git-remote-ripclone.rs"

[[bin]]
name = "writer_bench"
path = "src/bin/writer_bench.rs"

[[bin]]
name = "ripclone-worker"
path = "src/bin/ripclone-worker.rs"

[[bin]]
name = "ripclone-dispatcher"
path = "src/bin/ripclone-dispatcher.rs"

[features]
default = ["zlib-ng"]
# Use zlib-ng for faster pack compression/decompression. Disable this feature
# (e.g. `cargo build --no-default-features`) on platforms where cmake is not
# available.
zlib-ng = ["flate2/zlib-ng"]

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
base64 = "0.22"
byteorder = "1.5"
chrono = "0.4"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive", "env"] }
filetime = "0.2"
flate2 = "1"
futures = "0.3"
hex = "0.4"
hmac = "0.13"
libc = "0.2.186"
prost = "0.14"
rayon = "1"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
s3 = { version = "0.1.36", default-features = false, features = ["async", "rustls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
sha2 = "0.11"
fastcdc = "4"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
unicode-normalization = "0.1"
urlencoding = "2"
walkdir = "2"
zstd = { version = "0.13", features = ["zdict_builder"] }
secrecy = "0.10.3"
async-trait = "0.1.89"
# `rust_crypto` selects the pure-Rust crypto provider so RS256 sign/verify work
# (the GitHub App broker signs JWTs; OIDC verifies them).
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
subtle = "2"
# SQLite is the only SQL metadata and queue backend.
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite"] }
gix = "0.85.0"
gix-pack = "0.72.0"
rpassword = "7"
toml = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

# mimalloc is the global allocator ONLY on the static-musl Linux release builds
# (see the #[global_allocator] in src/lib.rs) to offset musl's slower default
# allocator. Target-gated so glibc/macOS builds neither pull nor compile it.
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
secrecy = "0.10.3"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
sha2 = "0.11"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
proptest = "1"
prost = "0.14"

[build-dependencies]
prost-build = "0.14"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = "line-tables-only"

# CI test gate profile: faster to compile than full release (opt-level 2, no LTO,
# many codegen units). Test runtime stays fine for the gate; release builds are
# used for actual shipped binaries (and musl smoke).
[profile.ci]
inherits = "release"
opt-level = 2
codegen-units = 256
lto = false
debug = "line-tables-only"
