[package]
name = "ripclone-spikes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
